test1/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-app
  labels:
    app: todo-app
spec:
  type: ClusterIP
  ports:
  - port: 9999
    targetPort: 9999
    protocol: TCP
    name: http
  selector:
    app: todo-app
